<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ParabolaAnimationActivity">

    <TextView
        android:id="@+id/tv_start_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:text="@string/start_anim"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_start_anim"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/click_start_anim" />

    <TextView
        android:id="@+id/tv_end_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:text="@string/end_anim"
        android:textSize="18sp" />
</RelativeLayout>